* New: Added argument types to all function calls.

* New: Added abstract functions to the base storage class, so that implementing a custom one will be
  easier.

* Change: Added an spl_autoload_register() autoloader.

* Change: Due to namespaces restrictions, the default lexer and degenerator are not called "default"
  anymore but "standard".

* New: Introduced namespaces

* Removal: Removed the old db update scripts. It has been so long that probably, nobody still uses
  an old b8 installation anymore.

* Removal: Removed the PostgreSQL backend (due to lack of possibility of testing/maintaining).

* Removal: Removed the original MySQL backend using the long-deprecated mysql functions (as opposed
  to the newer mysqli ones).

* General: Overall code rework. The library needed it ;-) This includes:
  - Renamed functions to consistent names.
  - Added a "start transaction" function to the base storage backend.
  - Moved the database connection setup out of the backend. The user should care about this.

* Change: Switched to a more meaningful ChangeLog format.

2019-02-08 Tobias Leupold <tobias.leupold@web.de>

    * Release: Version 0.6.2

    * b8.php: Removed the use of the (as of PHP 7.2) deprecated each() function. Thanks to Markus Hauser <mh@diebeiden.at> for the bug report along with a proposed patch!

    * Overall code cleanup: Fixed coding style, indentation, function names, variable names ...

2014-03-12 Tobias Leupold <tobias.leupold@web.de>

    * Release: Version 0.6.1

    * storage/storage_postgresql.php: Added a backend for PostgreSQL, written by Tom Regner <tom@goochesa.de>

    * storage/storage_mysql.php: Fixed the theoretical possibility for an SQL injection. Thanks to Dirk Stolle for the bug report!

    * storage/storage_mysqli.php: Added a MySQL backend using the new mysqli_* functions instead of the legacy mysql_* ones. Thanks to Lorenzo Masetti <lorenzo.masetti@gmail.com> for the initial port!
